fixed issues with second navbar margin and alignment as well as ade it so if you click the same label twice it will get removed. fixed text group title alignment as well as made some adjustment to label stying inside the task details compoenent. inserted the task details components in to a modal

--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -5,11 +5,13 @@
   color: white;
   text-align: center;
   z-index: 10;
+  cursor: pointer;
   .navbar-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     .navbar-left-side {
+      margin-left: 3px;
       display: flex;
       :last-child {
         margin-left: 10px;
@@ -52,7 +54,7 @@
           place-items: center;
         }
         .home-icon {
-          font-size: 18px;
+          cursor: pointer;
         }
       }
       .search-icon {
