--- a/src/styles/components/_board-options-nav.scss
+++ b/src/styles/components/_board-options-nav.scss
@@ -3,11 +3,12 @@
   width: 100%;
   color: white;
   text-align: center;
-  height: 40px;
+  height: 50px;
   background-color: rgba(0, 0, 0, 0.4);
-  padding: 5px;
+  padding: 15px 0;
   top: 9.5%;
   .left-side {
+    margin-inline-start: 5px;
     .board-members {
       align-self: center;
       > * {
@@ -22,7 +23,7 @@
         width: 30px;
         height: 30px;
         color: black;
-        border-radius: 50%;
+        border-radius: 3px;
         transition: all 0.3s;
         background-color: #fff;
         padding: 2px;
@@ -30,6 +31,9 @@
           background-color: white;
         }
       }
+    }
+    span {
+      max-width: 100%;
     }
     input {
       min-width: 30px;
@@ -54,6 +58,11 @@
     }
   }
   .right-side {
+    :last-child {
+      margin-right: 20px;
+    }
+    display: flex;
+    align-items: center;
     button {
       background-color: #465055;
       border-radius: 3px;
