--- a/src/styles/components/_task-group-container.scss
+++ b/src/styles/components/_task-group-container.scss
@@ -33,6 +33,7 @@
     display: flex;
     justify-content: space-between;
     position: relative;
+    padding: 5px 0;
     .task-group-title {
       cursor: pointer;
       font-family: Montserrat-Bold;
