--- a/src/styles/components/_template.scss
+++ b/src/styles/components/_template.scss
@@ -27,7 +27,7 @@
     content: "";
     top: 0;
     position: absolute;
-    height: 10%;
+    height: 23px;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.384);
   }
